--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@redux-devtools/core": "^3.13.1",
     "@reduxjs/toolkit": "^1.8.3",
     "@types/node": "^18.0.6",
+    "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
     "next": "12.2.1",
     "next-redux-wrapper": "^7.0.5",
