--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "module": "esnext",
     "isolatedModules": true,
     "jsx": "preserve",
-    // "resolveJsonModule": true
+    "resolveJsonModule": true,
   },
   "include": [
     "next-env.d.ts",
