--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,9 @@
   },
   "plugins": ["react", "react-hooks", "prettier"],
   "rules": {
+    "eqeqeq": "error",
     "indent": "off",
+    "no-unused-expressions": "error",
     "react/jsx-props-no-spreading": "off",
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
@@ -43,6 +45,12 @@
         "printWidth": 80,
         "parser": "flow",
         "endOfLine": "auto"
+      }
+    ],
+    "react/jsx-no-undef": [
+      "error",
+      {
+        "allowGlobals": false
       }
     ]
   }
